5. Styling Layout finished, 6. Config multilingual finished, 7. Multi themes finished

--- a/ngClientDev/src/app/app.component.html
+++ b/ngClientDev/src/app/app.component.html
@@ -1,7 +1,6 @@
 
 <app-navbar></app-navbar>
-<h1>Welcome to {{title}}!</h1>
 <div class="routes">
-  <flash-messages></flash-messages>
+  <flash-messages id="messages"></flash-messages>
   <router-outlet></router-outlet>
 </div>
