--- a/ngClientDev/src/styles.sass
+++ b/ngClientDev/src/styles.sass
@@ -1,11 +1,45 @@
+@import ./app/styles/mixins/mixins
+@import ./app/styles/animations/animations
+@import ./app/styles/fonts/fonts
+@import ./app/styles/themes/themes
+@import ./app/app.component
+@import ./app/components/navbar/navbar.component
+@import ./app/components/home/home.component
+@import ./app/components/login/login.component
+@import ./app/components/register/register.component
+@import ./app/components/chat/users/users.component
+@import ./app/components/chat/room/room.component
+
+*
+  +reset
+  +link
+  +list
+  +fontFamily(roboto-300)
+
 body
-    background: #f4f
+  +y(100%)
+  +x(100%)
 
-nav
-    background: #aa5
+//.red
+  //+position(relative, 0px, 0px)
+  //+flex(1, 0, 70%, flex-end)
+  //flex-wrap: wrap
+  //text-align: center
+  // max-width: 50%
+  // border-radius: 10px
+  // box-shadow: 0px 0px 20px 0px #f00
+  // +padding(10px)
+  // +margin(10px)
+  // background: red
 
-.red
-    background: #f00
-
-.blue
-    background: #00f
+//.blue
+  //+position(relative, 0px, null,null, 0px)
+  //+flex(1, 0, 70%, flex-start)
+  //flex-wrap: wrap
+  //text-align: center
+  // max-width: 50%
+  // border-radius: 10px
+  // box-shadow: 0px 0px 20px 0px #00f
+  // +padding(10px)
+  // +margin(10px)
+  // background: blue
