8. Fixed issues with web socket and db

--- a/ngClientDev/src/app/components/home/home.component.html
+++ b/ngClientDev/src/app/components/home/home.component.html
@@ -1,47 +1,51 @@
 
-<section id="about">
-  <header>
-    <h1>{{ strings.lang?.home.header.h1 }}</h1>
-    <p>{{ strings.lang?.home.header.p1 }}</p>
-    <p>{{ strings.lang?.home.header.p2 }}</p>
-    <ul>
-      <ng-container *ngFor="let item of strings.lang?.home.header.li1">
-        <li>
-          <p>{{ item + ',' }}</p>
-        </li>
-      </ng-container>
+<section class="about" id="about">
+  <header class="header">
+    <h1 class="header__title">{{ strings.lang?.home.header.h1 }}</h1>
+    <p class="header__subtitle">{{ strings.lang?.home.header.p1 }}</p>
+    <ul class="header__list">
+      <li class="header__list__item">
+        <h6 class="header__list__title">{{ strings.lang?.home.header.p2 }}</h6>
+        <ul class="header__sublist">
+          <ng-container *ngFor="let item of strings.lang?.home.header.li1">
+            <li class="header__sublist__item">
+              <p class="header__sublist__item__content">{{ item + ',' }}</p>
+            </li>
+          </ng-container>
+        </ul>
+      </li>
     </ul>
   </header>
-  <article>
-    <h3>{{ strings.lang?.home.article.h1 }}</h3>
-    <ul>
+  <article class="article">
+    <h3 class="article__title">{{ strings.lang?.home.article.h1 }}</h3>
+    <ul class="article__list">
       <ng-container *ngFor="let item of strings.lang?.home.article.li1">
-        <li>
-          <p>{{ item + ',' }}</p>
+        <li class="article__list__item">
+          <p class="article__list__content">{{ item + ',' }}</p>
         </li>
       </ng-container>
     </ul>
-    <h3>{{ strings.lang?.home.article.h2 }}</h3>
-    <ul>
+    <h3 class="article__title">{{ strings.lang?.home.article.h2 }}</h3>
+    <ul class="article__list">
       <ng-container *ngFor="let item of strings.lang?.home.article.li2">
-        <li>
-          <p>{{ item + ',' }}</p>
+        <li class="article__list__item">
+          <p class="article__list__content">{{ item + ',' }}</p>
         </li>
       </ng-container>
     </ul>
-    <h3>{{ strings.lang?.home.article.h3 }}</h3>
-    <ul>
+    <h3 class="article__title">{{ strings.lang?.home.article.h3 }}</h3>
+    <ul class="article__list">
       <ng-container *ngFor="let item of strings.lang?.home.article.li3">
-        <li>
-          <p>{{ item + ',' }}</p>
+        <li class="article__list__item">
+          <p class="article__list__content">{{ item + ',' }}</p>
         </li>
       </ng-container>
     </ul>
-    <h3>{{ strings.lang?.home.article.h4 }}</h3>
-    <ul>
+    <h3 class="article__title">{{ strings.lang?.home.article.h4 }}</h3>
+    <ul class="article__list">
       <ng-container *ngFor="let item of strings.lang?.home.article.li4">
-        <li>
-          <p>{{ item + ',' }}</p>
+        <li class="article__list__item">
+          <p class="article__list__content">{{ item + ',' }}</p>
         </li>
       </ng-container>
     </ul>
