--- a/ngClientDev/src/app/components/home/home.component.sass
+++ b/ngClientDev/src/app/components/home/home.component.sass
@@ -1,21 +1,23 @@
-#about
+.about
   +padding(30px, 10px)
   text-align: center
 
-  p
-    +padding(2px, 0px)
-
-  header
-    h1
+  .header
+    .header__title
       +padding(40px, 0px)
 
-    >p:nth-child(2)
+    .header__subtitle
       +padding(30px, 0px)
 
-    >p:nth-child(3)
+    .header__list__title
       +padding(30px, 0px)
-      font-weight: bold
 
-  article
-     h3
+    .header__sublist__item__content
+      +padding(2px, 0px)
+
+  .article
+    .article__title
       +padding(40px, 0px)
+
+    .article__list__content
+      +padding(2px, 0px)
