--- a/ngClientDev/src/app/components/chat/room/room.component.pug
+++ b/ngClientDev/src/app/components/chat/room/room.component.pug
@@ -1,27 +1,31 @@
 section.room
-  div.chat
+  div.chat(
+    id='chat'
+  )
     div.output
-    div(
+  div.container
+    div.userWrite(
       id='userWrite',
       *ngIf='userWriteBool'
-      ) {{ strings.lang?.room.somebody + '...' }}
-  form.form(
-    id='form'
-    )
-    textarea.area(
-      id='area',
-      maxlength='100'
-      '[(ngModel)]'='input',
-      name='input'
       )
-    div
-      input(
-        type='submit',
-        [value]='strings.lang?.room.send',
-        (click)='sendMessage()'
+      p {{ userWrite }} {{ strings.lang?.room.somebody }}
+    form.form(
+      id='form'
+      )
+      textarea.area(
+        id='area',
+        maxlength='100'
+        '[(ngModel)]'='input',
+        name='input'
         )
-      input(
-        type='button',
-        [value]='strings.lang?.room.exit',
-        (click)='exitTalk()'
-        )
+      div
+        input(
+          type='submit',
+          [value]='strings.lang?.room.send',
+          (click)='sendMessage()'
+          )
+        input(
+          type='button',
+          [value]='strings.lang?.room.exit',
+          (click)='exitTalk()'
+          )
