--- a/ngClientDev/src/app/components/chat/room/room.component.sass
+++ b/ngClientDev/src/app/components/chat/room/room.component.sass
@@ -3,8 +3,18 @@
   +x(100%)
   min-height: 100vh
 
-.form
+.container
   +position(fixed, null, 0px, 0px)
+  +x(100%)
+
+.userWrite
+  +padding(10px)
+  +margin(10px)
+  border-radius: 5px
+  background: red
+
+
+.form
   +x(100%)
   min-height: 20px
   display: flex
