--- a/ngClientDev/src/styles.sass
+++ b/ngClientDev/src/styles.sass
@@ -9,6 +9,7 @@
 @import ./app/components/register/register.component
 @import ./app/components/chat/users/users.component
 @import ./app/components/chat/room/room.component
+@import ./app/components/spinner/spinner.component
 
 *
   +reset
