--- a/ngClientDev/src/app/components/navbar/navbar.component.html
+++ b/ngClientDev/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 
 <nav>
-  <div class="close" id="burger"><a (click)="showList(&quot;menu&quot;)">
+  <div class="close" id="burger"><a class="navbar__burger__link" (click)="showList(&quot;menu&quot;)">
       <div><span></span><span></span><span></span></div></a>
     <div id="navBackground"></div>
     <ul class="hide" id="menu">
