--- a/ngClientDev/src/app/components/navbar/navbar.component.pug
+++ b/ngClientDev/src/app/components/navbar/navbar.component.pug
@@ -6,7 +6,7 @@ nav
     id='burger',
     class='close'
     )
-    a(
+    a.navbar__burger__link(
       (click)='showList("menu")'
       )
       div
