--- a/ngClientDev/src/app/styles/mixins/mixins.sass
+++ b/ngClientDev/src/app/styles/mixins/mixins.sass
@@ -53,6 +53,9 @@
     margin-bottom: #{$bottom}
     margin-left: #{$left}
 
+@mixin bg($bg)
+  background: $bg
+
 @mixin reset()
   padding: 0px
   margin: 0px
