--- a/ngClientDev/src/styles.sass
+++ b/ngClientDev/src/styles.sass
@@ -1,6 +1,7 @@
 @import ./app/styles/mixins/mixins
 @import ./app/styles/animations/animations
 @import ./app/styles/fonts/fonts
+@import ./app/styles/fonts/awesome/sass/font-awesome
 @import ./app/styles/themes/themes
 @import ./app/app.component
 @import ./app/components/navbar/navbar.component
