--- a/ngClientDev/src/app/components/navbar/navbar.component.sass
+++ b/ngClientDev/src/app/components/navbar/navbar.component.sass
@@ -26,7 +26,7 @@ nav
       +flex(0, 0, 20%, column)
 
   #burger
-    +position(fixed, 10px, null, null, 10px)
+    +position(fixed, 10px)
     +x(35px)
     +y(35px)
     +padding(10px)
@@ -44,7 +44,6 @@ nav
         +display()
         +y(5px)
         +x(35px)
-        left: 0px
         border-radius: 2.5px
 
     #navBackground
