--- a/ngClientDev/src/app/styles/animations/animations.sass
+++ b/ngClientDev/src/app/styles/animations/animations.sass
@@ -1,15 +1,8 @@
-$arg: 1
-
 .show
   opacity: 1
   transform: translateX(0px)
   visibility: visible
   transition: all 0.6s cubic-bezier(0.22, 0.61, 0.36, 1)
-
-  // li:nth-child(n + #{$arg})
-  //   a
-  //     transform: translateX(0px)
-  //     transition: all 0.8s
 
   >li:nth-child(1)
     >a
@@ -47,11 +40,6 @@ $arg: 1
   visibility: hidden
   transition: all 0.6s cubic-bezier(0.76, 0.18, 0.49, 0.76)
 
-  // li:nth-child(n + #{$arg})
-  //   a
-  //     transform: translateX(-500px)
-  //     transition: all 0.8s
-
   >li:nth-child(1)
     >a
       transform: translateX(500px)
@@ -83,12 +71,19 @@ $arg: 1
       transition: all 1.8s
 
 .close
+  transition: all 0.5s
+  right: 10px
+
+  .navbar__burger__link
+    transform: rotate(0deg)
+    transition: all 0.5s
+
   #navBackground
     transform: scale3d(1, 1, 1)
     transition: all 1s
 
   span
-    transition: transform 0.5s, top 0.5s 0.5s
+    transition: transform 0.5s 0.5s, top 0.5s 1s
     transform: rotate(0deg)
 
   span:nth-child(1)
@@ -101,6 +96,13 @@ $arg: 1
     top: 15px
 
 .open
+  transition: all 1.5s 0.5s
+  right: 45%
+
+  .navbar__burger__link
+    transform: rotate(-360deg)
+    transition: all 1.5s 0.5s
+
   #navBackground
     transform: scale3d(100, 100, 100)
     transition: all 1s
@@ -110,13 +112,12 @@ $arg: 1
 
   span:nth-child(1)
     top: 15px
-    transform: rotate(45deg)
+    transform: rotate(-45deg)
 
   span:nth-child(2)
     top: 10px
-    transform: rotate(45deg)
+    transform: rotate(-45deg)
 
   span:nth-child(3)
     top: 5px
-    transform: rotate(135deg)
-
+    transform: rotate(-135deg)
